--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p>3. Перевірка статусу репозиторія <b>git status</b> </p>
             <p>4. Добавлення  всіх файлів в індекс <b>git add -A</b>, по одному <b>git add index.html</b>, або за розширенням <b>git add *.html</b></p>
             <p>5. Виконуємо збереження контрольної точки <b>git commit -a -m"first commit"</b></p>
-            <p>6. Виконуємо збереження контрольної точки <b>git commit -a -m"first commit"</b></p>
-            <p>7. Виконуємо збереження контрольної точки <b>git commit -a -m"first commit"</b></p>
+            <p>6. Переглянути список контрольних точок <b>git log</b></p>
+            <p>7. Викладаємо на сервер GitHub <b>git remote add origin https://github.com/neo13th/git-command.git</b></p>
         </div>
     </div>
 </body>
