--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <p>4. Добавлення  всіх файлів в індекс <b>git add -A</b>, по одному <b>git add index.html</b>, або за розширенням <b>git add *.html</b></p>
             <p>5. Виконуємо збереження контрольної точки <b>git commit -a -m"first commit"</b></p>
             <p>6. Переглянути список контрольних точок <b>git log</b></p>
-            <p>7. Реєструємо на сервері GitHub <b>git remote add origin https://github.com/neo13th/git-command.git</b>, а потім відправляємо <b>git push -u origin main</b></p>
+            <p>7. Реєструємо на сервері GitHub <b>git remote add origin https://github.com/neo13th/git-command.git</b>, а потім відправляємо <b>git push -u origin master</b></p>
+            <p>8. Відкриття проекту на іншому ПК <b>git clone https://github.com/neo13th/git-command.git name_folder</b></p>
         </div>
     </div>
 </body>
