--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p>6. Переглянути список контрольних точок <b>git log</b></p>
             <p>7. Реєструємо на сервері GitHub <b>git remote add origin https://github.com/neo13th/git-command.git</b>, а потім відправляємо <b>git push -u origin master</b></p>
             <p>8. Відкриття проекту на іншому ПК <b>git clone https://github.com/neo13th/git-command.git name_folder</b></p>
+            <p>9. Для оновлення файлів прописуємо команду <b>git pull</b></p>
         </div>
     </div>
 </body>
