--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p>7. Реєструємо на сервері GitHub <b>git remote add origin https://github.com/neo13th/git-command.git</b>, а потім відправляємо <b>git push -u origin master</b></p>
             <p>8. Відкриття проекту на іншому ПК <b>git clone https://github.com/neo13th/git-command.git name_folder</b></p>
             <p>9. Для оновлення файлів прописуємо команду <b>git pull</b></p>
+            <p>10. Для <b>merge</b> - злиття (обєднання файлів ПК і репозиторія в одній гілці) виконуємо message commit (пишемо сповіщення прямо в терміналі) потім <b>Ctrl+C два рази -> :wq! -> Enter</b></p>
         </div>
     </div>
 </body>
